@@ -1,0 +1,19 @@
+layer at (0,0) size 800x600
+  RenderCanvas at (0,0) size 800x600
+layer at (0,0) size 800x600
+  RenderBlock {HTML} at (0,0) size 800x600
+    RenderBody {BODY} at (8,8) size 784x584
+      RenderBlock {DIV} at (0,0) size 784x84 [border: (2px solid #FF0000)]
+        RenderBlock {DIV} at (14,14) size 756x28
+          RenderText {TEXT} at (0,0) size 32x28
+            text run at (0,0) width 32: "foo"
+        RenderBlock (anonymous) at (14,42) size 756x28
+          RenderText {TEXT} at (0,0) size 31x28
+            text run at (0,0) width 31: "bar"
+selection is RANGE:
+start:      position 0 of child 3 {TEXT} of root {DIV}
+upstream:   position 0 of child 3 {TEXT} of root {DIV}
+downstream: position 0 of child 3 {TEXT} of root {DIV}
+end:        position 3 of child 3 {TEXT} of root {DIV}
+upstream:   position 3 of child 3 {TEXT} of root {DIV}
+downstream: position 4 of child 3 {TEXT} of root {DIV}
