@@ -1,5 +1,14 @@
 2004-12-16  Ken Kocienda  <kocienda@apple.com>
 
+        Reviewed by me
+        
+        Added a layout test based on my last checkin.
+
+        * layout-tests/editing/selection/move-by-word-001-expected.txt: Added.
+        * layout-tests/editing/selection/move-by-word-001.html: Added.
+
+2004-12-16  Ken Kocienda  <kocienda@apple.com>
+
         Reviewed by John
 
         Fix for this bug:
